deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: avborovets/restful_api_example
        name: restful-api-example
        ports:
        - containerPort: 8099
